<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginStart="12dp"
    android:layout_marginEnd="12dp"
    android:layout_marginVertical="10dp"
    android:layout_marginHorizontal="10dp"
    app:cardCornerRadius="20dp"
    app:cardElevation="0dp"
    android:backgroundTint="?attr/colorPrimaryVariant"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:ignore="NestedWeights">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:weightSum="3"
                android:layout_marginStart="10dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/lv_name"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/name"/>
                <TextView
                    android:id="@+id/lv_des"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/description"/>
                <TextView
                    android:id="@+id/lv_id"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/id"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:weightSum="2"
                android:layout_marginEnd="10dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/lv_long"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/longitude"/>
                <TextView
                    android:id="@+id/lv_lat"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/latitude"/>
            </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>