<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:weightSum="15"
    android:background="?attr/background"
    tools:context=".EditorFragment"
    tools:ignore="NestedWeights,AutoFill">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/poi_editor"
        android:textSize="40sp" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:layout_marginHorizontal="20dp"
        app:cardCornerRadius="10dp"
        android:backgroundTint="?attr/colorOnBackground">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="4">

            <EditText
                android:id="@+id/editName"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="text"
                android:hint="@string/name"
                tools:ignore="TouchTargetSizeCheck" />

            <EditText
                android:id="@+id/editDescription"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="text"
                android:hint="@string/description"
                tools:ignore="TouchTargetSizeCheck" />

            <EditText
                android:id="@+id/editLon"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_gravity="center_horizontal"
                android:ems="10"
                android:inputType="numberDecimal"
                android:hint="@string/longitude" />

            <EditText
                android:id="@+id/editLat"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_gravity="center_horizontal"
                android:ems="10"
                android:inputType="numberDecimal"
                android:hint="@string/latitude" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.2"
        android:weightSum="2">
        <Button
            android:id="@+id/addPOI"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="5dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:text="@string/add_poi"
            android:textColor="@color/black"
            android:background="@drawable/editor_button"/>
        <Button
            android:id="@+id/current"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="20dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:text="@string/current_position"
            android:textColor="@color/black"
            android:background="@drawable/editor_button" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.2"
        android:orientation="horizontal"
        android:weightSum="7">

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="6"
            android:backgroundTint="?attr/colorOnBackground">
            <EditText
                android:id="@+id/list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:inputType="text"
                android:hint="@string/id" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:backgroundTint="?attr/colorOnBackground">
            <ImageButton
                android:id="@+id/deleteID"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/delete_icon"
                android:contentDescription="@string/delete_by_id_description"
                />

        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        app:cardCornerRadius="20dp"
        android:backgroundTint="@color/LM_colorPrimary">
        <ListView
            android:layout_marginHorizontal="5dp"
            android:id="@+id/scroll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@color/transparent"
            android:dividerHeight="3dp"
            android:fadingEdge="none"
            />

    </androidx.cardview.widget.CardView>
</LinearLayout>